Add -center flag

--- a/addon/bpmotes.css
+++ b/addon/bpmotes.css
@@ -626,3 +626,12 @@ word-break:normal;}
    filter: grayscale(1)!important;
    -webkit-filter: grayscale(1)!important;
 }
+
+/*==center==*/
+
+.bpflag-center {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
