Stylesheet/emote/tag updates 2016-07-11

--- a/source-css/applejack.css
+++ b/source-css/applejack.css
@@ -599,7 +599,7 @@ a[href|="/applederp"],a[href|="/rapplederp"],a[href|="/ppseesyou"],a[href|="/rpp
 
 /*---------------- END COPY ----------------*/
 
-a[href|="/aj00"], a[href|="/aj01"], a[href|="/aj02"], a[href|="/aj03"], a[href|="/aj04"], a[href|="/aj05"], a[href|="/aj06"], a[href|="/aj07"], a[href|="/aj08"], a[href|="/aj09"], a[href|="/aj10"], a[href|="/aj11"], a[href|="/aj12"], a[href|="/aj13"], a[href|="/aj14"], a[href|="/aj15"], a[href|="/aj16"], a[href|="/aj17"], a[href|="/aj18"], a[href|="/aj19"], a[href|="/aj20"], a[href|="/aj21"], a[href|="/aj22"], a[href|="/aj23"], a[href|="/aj24"], a[href|="/aj25"], a[href|="/aj26"], a[href|="/aj27"], a[href|="/aj28"], a[href|="/aj29"] {
+a[href|="/aj00"], a[href|="/aj01"], a[href|="/aj02"], a[href|="/aj03"], a[href|="/aj04"], a[href|="/aj05"], a[href|="/aj06"], a[href|="/aj07"], a[href|="/aj08"], a[href|="/aj10"], a[href|="/aj11"], a[href|="/aj12"], a[href|="/aj13"], a[href|="/aj14"], a[href|="/aj15"], a[href|="/aj16"], a[href|="/aj17"], a[href|="/aj18"], a[href|="/aj20"], a[href|="/aj21"], a[href|="/aj22"], a[href|="/aj23"], a[href|="/aj24"], a[href|="/aj25"], a[href|="/aj26"], a[href|="/aj27"], a[href|="/aj28"] {
   display: block;
   clear: none;
   float: left;
@@ -638,7 +638,6 @@ a[href|="/aj05"] { background-position: 0 -350px; }
 a[href|="/aj06"] { background-position: 0 -420px; }
 a[href|="/aj07"] { background-position: 0 -490px; }
 a[href|="/aj08"] { background-position: 0 -560px; }
-a[href|="/aj09"] { background-position: 0 -630px; }
 a[href|="/aj10"], a[href|="/apj10"], a[href|="/ja10"] { background-position: -70px 0; }
 a[href|="/aj11"], a[href|="/apj11"], a[href|="/ja11"] { background-position: -70px -70px; }
 a[href|="/aj12"], a[href|="/ja12"] { background-position: -70px -140px; }
@@ -648,7 +647,6 @@ a[href|="/aj15"] { background-position: -70px -350px; }
 a[href|="/aj16"] { background-position: -70px -420px; }
 a[href|="/aj17"] { background-position: -70px -490px; }
 a[href|="/aj18"] { background-position: -70px -560px; }
-a[href|="/aj19"] { background-position: -70px -630px; }
 a[href|="/aj20"], a[href|="/apj20"], a[href|="/ja20"] { background-position: -140px 0; }
 a[href|="/aj21"], a[href|="/apj21"], a[href|="/ja21"] { background-position: -140px -70px; }
 a[href|="/aj22"], a[href|="/ja22"] { background-position: -140px -140px; }
@@ -658,7 +656,6 @@ a[href|="/aj25"] { background-position: -140px -350px; }
 a[href|="/aj26"] { background-position: -140px -420px; }
 a[href|="/aj27"] { background-position: -140px -490px; }
 a[href|="/aj28"] { background-position: -140px -560px; }
-a[href|="/aj29"] { background-position: -140px -630px; }
 
 /*** BPM Ignore ***/
 
