--- a/source-css/falloutequestria.css
+++ b/source-css/falloutequestria.css
@@ -1357,7 +1357,7 @@ a[href="/s"]:hover::after { color: black }
 		a[href|="/bjhmm"]{ background-position: 0px -1305px}
 		a[href|="/bjspoilers"]{ background-position: 0px -1450px}
 		a[href|="/lpbarndoor"]{ background-position: 0px -1595px}
-		a[href|="/lpwellexcuseme"]{ background-position: 0px -1740px; width:70px; height:70px; background-size: 70px 70px;}
+		a[href|="/lpwellexcuseme"]{ background-position: 0px -1740px;}
 		a[href|="/lpclose"]{ background-position: 0px -1885px}
 		a[href|="/alloy"]{ background-position: 0px -2030px}
 		a[href|="/hiddenshock"]{ background-position: -145px 0px}
