--- a/source-css/mylittlepony.css
+++ b/source-css/mylittlepony.css
@@ -34,8 +34,8 @@
 
 
 div.titlebox span.word {display:none}
-div.titlebox .subscribers span.number:after {content:" Chef Cameos"}
-div.titlebox .users-online span.number:after {content:" Shouting At The Food"}
+div.titlebox .subscribers span.number:after {content:" Staring into the Hiatus"}
+div.titlebox .users-online span.number:after {content:" Have the Hiatus stare back."}
 
 .sidecontentbox .flair {display:none}
 .sidebox .spacer {display:none}
@@ -177,7 +177,7 @@ border-top-right-radius: 5px;
 {
  display:inline-block;
  float:right;
- background:url(%%amotes%%);
+ background:url(%%trixie-hat%%);
  width:70px;
  height:70px;
  margin-top:-45px;
