--- a/source-css/ponymotes.css
+++ b/source-css/ponymotes.css
@@ -497,7 +497,7 @@ a[href|="/twithatsnice"], a[href|="/buysomeapples"], a[href|="/cadsoawesome"], a
 {background-image:url(%%70x70b%%);width:70px;height:70px;display:block;float:left;}
 
 /* 70x70c 'motes */
-a[href|="/trixcookie"], a[href|="/spitfirejudge"], a[href|="/marblescared"], a[href|="/apathiawhat"], a[href|="/changelingsad"], a[href|="/sadtwilight"], a[href|="/sadtwilight2"], a[href|="/twicheesy"], a[href|="/fritterugh"], a[href|="/frittugh"], a[href|="/celestiahh"], a[href|="/nervoustrixie"], a[href|="/youkickedthepuppy"], a[href|="/disreally"], a[href|="/ssshy"], a[href|="/ajangry"], a[href|="/twidisappointed"], a[href|="/sadscoots"], a[href|="/rdspeechless"], a[href|="/scootadrunk"], a[href|="/didneyland"], a[href|="/DIDNEYLAND"], a[href|="/ssawe"], a[href|="/crazyfs"], a[href|="/fstwicrazy"], a[href|="/flutterconfused"], a[href|="/changelingmad"]
+a[href|="/trixcookie"], a[href|="/spitfirejudge"], a[href|="/marblescared"], a[href|="/apathiawhat"], a[href|="/changelingsad"], a[href|="/sadtwilight"], a[href|="/sadtwilight2"], a[href|="/twicheesy"], a[href|="/fritterugh"], a[href|="/frittugh"], a[href|="/celestiahh"], a[href|="/nervoustrixie"], a[href|="/youkickedthepuppy"], a[href|="/disreally"], a[href|="/ssshy"], a[href|="/ajangry"], a[href|="/twidisappointed"], a[href|="/sadscoots"], a[href|="/rdspeechless"], a[href|="/scootadrunk"], a[href|="/didneyland"], a[href|="/DIDNEYLAND"], a[href|="/ssawe"], a[href|="/crazyfs"], a[href|="/fstwicrazy"], a[href|="/flutterconfused"], a[href|="/changelingmad"], a[href|="/celoohshiny"], a[href|="/mayormare"]
 {background-image:url(%%70x70c%%);width:70px;height:70px;display:block;float:left;}
 
 /* 100x100a 'motes. */
@@ -606,7 +606,7 @@ a[href|="/jawdrop"], a[href|="/sbmagic"], a[href|="/fillydashie"], a[href|="/fsw
 {background-image:url(%%misfitsm%%);display:block;float:left;}
 
 /* Misfits n */
-a[href|="/apathiawhatareyoudoing"], a[href|="/doubletrix"], a[href|="/catscratch"], a[href|="/flutterawe"], a[href|="/discordbox"], a[href|="/sweetiebow"], a[href|="/extrachibipinkie"], a[href|="/twiart"], a[href|="/changelingscared"], a[href|="/starlightyouknow"], a[href|="/medicshy"], a[href|="/firinmaheeyup"], a[href|="/celestiawb"], a[href|="/rdthathurt"], a[href|="/sslove"], a[href|="/squareroot"], a[href|="/flirttwi"], a[href|="/flirtwi"], a[href|="/ajrdhoofbump"], a[href|="/nospoilers"], a[href|="/saltydash"], a[href|="/woonashrug"], a[href|="/chickenface"]
+a[href|="/apathiawhatareyoudoing"], a[href|="/doubletrix"], a[href|="/catscratch"], a[href|="/flutterawe"], a[href|="/discordbox"], a[href|="/sweetiebow"], a[href|="/extrachibipinkie"], a[href|="/twiart"], a[href|="/changelingscared"], a[href|="/starlightyouknow"], a[href|="/medicshy"], a[href|="/firinmaheeyup"], a[href|="/celestiawb"], a[href|="/rdthathurt"], a[href|="/sslove"], a[href|="/squareroot"], a[href|="/flirttwi"], a[href|="/flirtwi"], a[href|="/ajrdhoofbump"], a[href|="/nospoilers"], a[href|="/saltydash"], a[href|="/woonashrug"], a[href|="/chickenface"], a[href|="/sillystare"], a[href|="/mothpone"], a[href|="/blushychangeling"]
 {background-image:url(%%misfitsn%%);display:block;float:left;}
 
 /*
@@ -702,11 +702,11 @@ a[href|="/zerofucks"], a[href|="/greaserspike"], a[href|="/rdtwipride"], a[href|
 {background-position: 0 -700%;}
 
 /* Grid pos 1,7 'motes */
-a[href|="/pinkiestare"], a[href|="/nerdoctavia"], a[href|="/nerdtavi"], a[href|="/rdtwismile"], a[href|="/karmawat"], a[href|="/pinkieainthavingthatshit"], a[href|="/tavilewd"], a[href|="/echopolice"]
+a[href|="/pinkiestare"], a[href|="/nerdoctavia"], a[href|="/nerdtavi"], a[href|="/rdtwismile"], a[href|="/karmawat"], a[href|="/pinkieainthavingthatshit"], a[href|="/tavilewd"], a[href|="/echopolice"], a[href|="/celoohshiny"]
 {background-position: -100% -700%;}
 
 /* Grid pos 2,7 'motes */
-a[href|="/shibetwi"], a[href|="/rdtwicrazy"], a[href|="/apathiaunsure"], a[href|="/ppyay"], a[href|="/flaskhead"], a[href|="/lemonflask"]
+a[href|="/shibetwi"], a[href|="/rdtwicrazy"], a[href|="/apathiaunsure"], a[href|="/ppyay"], a[href|="/flaskhead"], a[href|="/lemonflask"], a[href|="/mayormare"]
 {background-position: -200% -700%;}
 
 /* Grid pos 0,8 'motes */
@@ -1365,3 +1365,6 @@ a[href|="/nospoilers"] {width:100px;height:86px;background-position: -372px -388
 a[href|="/saltydash"] {width:102px;height:149px;background-position: -666px -305px;}
 a[href|="/woonashrug"] {width:86px;height:100px;background-position: -472px -388px;}
 a[href|="/chickenface"] {width:71px;height:100px;background-position: -174px -371px;}
+a[href|="/sillystare"] {width:100px;height:86px;background-position: -558px -405px;}
+a[href|="/mothpone"] {width:125px;height:106px;background-position: -245px -424px;}
+a[href|="/blushychangeling"] {width:120px;height:200px;background-position: -54px -382px;}
