--- a/source-css/rosequisition.css
+++ b/source-css/rosequisition.css
@@ -11,8 +11,12 @@ a[href|="/rosecold"] { background-image: url(%%emotes1%%); background-position: 
 a[href|="/rosebutt"] { background-image: url(%%emotes1%%); background-position: -300px -483px; width: 208px; height: 110px; }
 a[href|="/roseexcite"] { background-image: url(%%emotes1%%); background-position: -325px -870px; width: 180px; height: 185px; }
 a[href|="/chubbierose"] { background-image: url(%%emotes1%%); background-position: -475px -670px; width: 235px; height: 155px; }
-a[href|="/roseshake"] { background-image: url(%%emotes1%%); background-position: -630px -470px; width: 113px; height: 127px; }
+a[href|="/roseshake"] { background-image: url(%%emotes1%%); background-position: -630px -500px; width: 113px; height: 127px; }
 a[href|="/underwhelmedrose"] { background-image: url(%%emotes1%%); background-position: -560px -869px; width: 165px; height: 180px; }
 a[href|="/simplyrose"] { background-image: url(%%emotes1%%); background-position: -570px -525px; width: 35px; height: 70px; } 
 a[href|="/buysomeflowers"] { background-image: url(%%emotes1%%); background-position: -344px -226px; width: 224px; height: 240px; }
 a[href|="/ponkofapproval"] { background-image: url(%%emotes1%%); background-position: -229px -322px; width: 106px; height: 103px; }
+a[href|="/nerdrose"] { background-image: url(%%emotes1%%); background-position: -595px -335px; width: 160px; height: 160px; }
+a[href|="/nerdlily"] { background-image: url(%%emotes1%%); background-position: -595px -177px; width: 160px; height: 160px; }
+a[href|="/lilypoint"] { background-image: url(%%emotes1%%); background-position: -325px -25px; width: 194px; height: 200px; }
+a[href|="/nerddaisy"] { background-image: url(%%emotes1%%); background-position: -580px -12px; width: 161px; height: 160px; }
